--- a/1 week/Facebook/index.html
+++ b/1 week/Facebook/index.html
@@ -25,8 +25,8 @@
                              <td><input type="button" id= "buttonenter" value="Вход"/></td>
                          </tr>
                          <tr>
-                             <td>&nbsp;</td>
-                             <td><p><a href="https://www.facebook.com/login/identify/?ctx=recover&ars=royal_blue_bar">Забыли аккаунт?</a></p></td>
+                            
+                             <td><p><a href="https://worldww.facebook.com/login/identify/?ctx=recover&ars=royal_blue_bar">Забыли аккаунт?</a></p></td>
                          </tr>
                      </table>
                 </div>
